versioned_docs/version-1.25/admin/cleanup.mdx
---
title: Garbage Collector
description: The Garbage Collector helps keep your infra costs under control by sleeping or deleting inactive environments.
sidebar_label: Garbage Collector
id: cleanup
---

import Image from "@theme/Image";
import Tabs from "@theme/Tabs";
import TabItem from "@theme/TabItem";
import TiersList from "@theme/TiersList";

The Okteto Garbage Collector helps keep your infra costs under control by sleeping or deleting inactive environments.

## Sleeping Resources

The Okteto Garbage Collector automatically scales inactive applications to zero if they haven't been used for longer than the `sleep` period to automatically save resources in your cluster.
Learn how to configure this in the [configuration steps](#configuration-steps-).

Additionally, Namespaces can be manually scaled to zero by navigating to Admin -> Namespaces and clicking on the three dots on the right side of the Namespace that you wish to sleep.
<p align="left">
  <Image
    src={require("@site/static/img/cleanup-namespace-sleep.jpg").default}
    alt="wake a sleeping resource"
    width="1000"
  />
</p>

## Inactive Applications and Resources

Okteto considers an application inactive if a user hasn't performed any of the following tasks during the `sleep` period.
The following events are considered activity that will prevent an application from being marked as inactive or will wake a sleeping namespace:

- Deploying a Kubernetes Deployment or StatefulSet with `kubectl` or similar tools
- Running `okteto deploy`
- Running `okteto up`
- Maintaining an active `okteto up` session. If the `upSessionByLastSyncedFile` setting is enabled, this only counts if files are actively being synced (based on the last synced file)
- Upgrade or redeploy via the UI or the command line

Service accounts, config maps, secrets, or volumes you create will be unaffected by the `sleep` operation.

Additionally, if you are using the Okteto Nginx Ingress Controller, incoming requests will automatically wake a sleeping namespace.
However, note that these incoming requests do not count as activity to reset the inactivity counter and keep the namespace awake.
The auto-wake behavior for incoming requests can also be disabled by [configuring the `autowake` field](self-hosted/helm-configuration.mdx#autowake).

### Manually Wake Sleeping Resources

Okteto's UI will notify you when there are sleeping applications in your namespace. Press the **Wake all** button to activate all sleeping resources at once.

<p align="left">
  <Image
    src={require("@site/static/img/wake.png").default}
    alt="wake a sleeping resource"
    width="1000"
  />
</p>


## Delete Unused Namespaces

Namespaces and all the resources and data contained within will be deleted if they stay `sleeping` for longer than the `delete` period. 

This only affects [Non-Personal Namespaces](core/namespaces.mdx), Personal Namespaces are not automatically deleted when idle.

## Persistent resources <TiersList tiers="Scale Enterprise Self-Hosted" />

In case you are interested in the Garbage Collector but you want to skip a specific Namespace, you can mark it as `persistent`.
To do so, you can add the label `dev.okteto.com/persistent` to it or [use the admin view](admin/dashboard.mdx#namespaces).

In case you want more granularity and only want to persist specific deployments or statefulsets within a Namespace, you can include the label `dev.okteto.com/persistent` on those resources.
In that case, the Garbage Collector will ignore only those specific resources while sleeping the rest of the Namespace.

## Configuration Steps <TiersList tiers="Scale Enterprise Self-Hosted" />

You can consult the `sleep` and `delete` periods in the [Admin Dashboard](admin/dashboard.mdx).

<Tabs
  defaultValue="self-hosted"
  values={[
    { label: 'Self-Hosted', value: 'self-hosted', },
    { label: 'SaaS', value: 'saas', },
  ]}
>
<TabItem value="self-hosted">

You can enable and customize the `sleep` and `delete` periods via the [garbage collector's settings](self-hosted/helm-configuration.mdx#gc).

</TabItem>

<TabItem value="saas">

If your instance is hosted by Okteto, [reach out to support](https://okteto.com/support) to modify this configuration.

</TabItem>
</Tabs>
